--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
         {
             "path": "/api/alerts/run",
-            "schedule": "*/15 * * * *"
+            "schedule": "0 0 * * *"
         }
     ]
 }
